# roam-to-git

./: .gitignore  README.md  env.template  environment.yml  pyproject.toml  requirements.txt  rr_download.py  setup.cfg  setup.py  tests.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  publish-to-pypi.yml  python-linting.yml  test.yml
roam_to_git/: __main__.py  formatter.py  fs.py  scrapping.py
roam_to_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
